// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot match 1`] = `
<div>
  <withRouter(Connect(Routes)) />
</div>
`;

exports[`Snapshot match 2`] = `
<div>
  <withRouter(Connect(Routes)) />
  <res />
</div>
`;
